--- a/docker/srcs/requirements/nginx/conf/nginx.conf
+++ b/docker/srcs/requirements/nginx/conf/nginx.conf
@@ -1,17 +1,13 @@
-events{
+server {
+    listen 443 ssl;
+    server_name obouhrir.42.fr www.obouhrir.42.fr;
+    root /var/www/wordpress;
+    index index.php;
+    ssl_certificate /etc/nginx/ssl/miroka.crt;
+    ssl_certificate_key /etc/nginx/ssl/miroka.key;
+    ssl_protocols TLSv1.3;
 
-}
-http {
-    server {
-        listen 443;
-        server_name obouhrir.42.fr www.obouhrir.42.fr;
-        root /var/www/html;
-        index index.html;
-        # ssl_certificate_key /etc/nginx/ssl/miroka.key;
-        # ssl_protocols TLSv1.3;
-
-        # location \ {
-        #     try_files $uri $uri/ =404;
-        # }
+    location \ .php {
+        # fastcgi
     }
 }
