--- a/docker/srcs/.env
+++ b/docker/srcs/.env
@@ -1,7 +1,9 @@
 DOMAIN_NAME=obouhrir.42.fr
-CERT_=./requirements/tools/obouhrir.42.fr.crt
-KEY_=./requirements/tools/obouhrir.42.fr.key
-# DB_NAME=wordpress
-# DB_ROOT=rootpass
-# DB_USER=wpuser
-# DB_PASS=wppass
+
+DB_NAME=rootmiroka
+DB_USER=miroka
+DB_PASS=123
+DB_PASSWORD=1234
+
+
+
