--- a/docker/srcs/requirements/nginx/conf/nginx.conf
+++ b/docker/srcs/requirements/nginx/conf/nginx.conf
@@ -1,13 +1,20 @@
 server {
     listen 443 ssl;
     server_name obouhrir.42.fr www.obouhrir.42.fr;
-    root /var/www/wordpress;
+    
+    root /var/www/html/wordpress;
     index index.php;
+    
     ssl_certificate /etc/nginx/ssl/miroka.crt;
     ssl_certificate_key /etc/nginx/ssl/miroka.key;
     ssl_protocols TLSv1.3;
 
-    location \ .php {
-        # fastcgi
+    location / {
+    	try_files $uri $uri/ =404;
+    }
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass wordpress:9000;
     }
 }
