--- a/docker/srcs/.env
+++ b/docker/srcs/.env
@@ -1,9 +1,18 @@
 DOMAIN_NAME=obouhrir.42.fr
 
 DB_NAME=rootmiroka
+# DB_PASSWORD=1234
 DB_USER=miroka
 DB_PASS=123
-DB_PASSWORD=1234
+
+WP_ADMIN=bouhrir
+WP_PASS_ADMIN=1234
+ADMIN_EMAIL=bouhrir@gmail.com
+
+WP_USER=obouhrir
+WP_PASS=123
+USER_EMAIL=obouhrir@gmail.com
+
 
 
 
